[package]
name = "orderbook_system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Lock-free SPMC channel — bounded, cache-line padded, ultra-low latency
crossbeam-channel = "0.5"
# Fast ordered map for price levels (BTreeMap is stdlib, but we also want custom)
# Using stdlib BTreeMap which is already excellent for this use case
# Minimal JSON parsing — we only parse arrays of [price, size]
serde_json = "1"
# High-resolution timing
quanta = "0.12"
# Memory-mapped file I/O for zero-copy reads
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[[bin]]
name = "orderbook_system"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bench.rs"
